# events-face

./: .env_sample  .gitignore  pyproject.toml
src/: urls.py
src/core/: settings.py
src/events/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py
src/sync/: admin.py  models.py
src/sync/management/commands/: sefep.py
src/sync/migrations/: 0001_initial.py
src/users/: admin.py  models.py  urls.py  views.py
src/users/management/commands/: csu.py
src/users/migrations/: 0001_initial.py
